melhora na escrita do warmup

--- a/questionnaire/templates/masterquest/inc_survey_cs_definition.html
+++ b/questionnaire/templates/masterquest/inc_survey_cs_definition.html
@@ -1,7 +1,7 @@
 {% load static %}
 
 <div class="alert alert-warning" role="alert" id="csDefinition">
-    The smell presented in the java code is <strong>{{task.getCsDescription.0}}</strong> <br>
+    The smell presented in the java code was classified as <strong>{{task.getCsDescription.0}}</strong> <br>
 
-    Definition: <strong>{{task.getCsDescription.1}}</strong>
+    Smell definition: <strong>{{task.getCsDescription.1}}</strong>
 </div>
