--- a/questionnaire/templates/masterquest/survey_warmup.html
+++ b/questionnaire/templates/masterquest/survey_warmup.html
@@ -63,7 +63,7 @@
             {% if showTree %}
             {
                 element: document.querySelector('#imgDecisionTree'),
-                intro: "The decision tree contains rules that leads to the code smell type that affects the java code. It serves merely as a support for decision making."
+                intro: "The decision tree contains rules that lead to the code smell type that affects the current java code. It serves merely as a support for decision making."
             },
             {
                 element: document.querySelector('#nodesGlossary'),
