adaptações para adequar às sugestões postadas no Trello

--- a/questionnaire/templates/masterquest/inc_survey_cs_definition.html
+++ b/questionnaire/templates/masterquest/inc_survey_cs_definition.html
@@ -3,5 +3,5 @@
 <div class="alert alert-warning" role="alert" id="csDefinition">
     The smell presented in the java code was classified as <strong>{{task.getCsDescription.0}}</strong> <br>
 
-    Smell definition: <strong>{{task.getCsDescription.1}}</strong>
+    Smell description: <strong>{{task.getCsDescription.1}}</strong>
 </div>
