--- a/questionnaire/templates/masterquest/surveyFinish.html
+++ b/questionnaire/templates/masterquest/surveyFinish.html
@@ -7,7 +7,7 @@
     <h1>4 - Survey finished successfully</h1>
 
     <p class="text-center">
-        Thank you for your support.
+        Thank you for your cooperation.
     </p>
 
     <p class="text-center">
