--- a/questionnaire/templates/masterquest/index.html
+++ b/questionnaire/templates/masterquest/index.html
@@ -9,37 +9,36 @@
     <h2 id="research-title">Research - Code smell detection aided by a decision tree classifier.</h2>
 
     <div style="text-indent: 40px; text-align: justify">
-        <p>Code anomaly, so-called "code smell", is an implementation choice that indicates a design problem that
+        <p>Code smell is an implementation choice that
             violates the well-known principles of cohesion, abstraction and separation of concerns on software
             development. </p>
 
         <p>
             There is a commonplace about the threats on software quality caused by code smells, at the same time that
-            there is a conflicted sense about what is a "smelliness code" though. Code smells and its variants
-            are design flaws that stand only in the definition of what it could be, thus every initiative of tracking
-            smells on source code is under the influence of a developer's experiences and backgrounds.
+            there is a conflicted sense about what is a "smelliness code" though. In literature, the different types of
+            code smell
+            stands only in an informal definition of what it could be, thus every initiative of tracking
+            smells on source code is under the influence of developer's experiences and backgrounds.
         </p>
 
         <p>
             The subjectiveness around code smells was addressed by recent studies to
-            empirically evaluate the opinion of developers about it. These empirical studies were aimed to expose
+            empirically evaluate how each developer perceive the presence of code smell in code. These empirical studies
+            were aimed to expose
             developers to software code snippets and gather their point of view about the occurrence of certain types of
-            code
-            smells, obtaining qualitative results of the agreements among developers.
+            code smells.
         </p>
 
         <p>
-            This research is a step ahead to discover agreements among developers, i. e., we intend to expose developers
-            to different source code snippets, written in java, along with a decision tree classifier. As an
-            interpretable model, this classifier will give insights to developers aimed to serve as a support to
-            decision making.
-        </p>
-        <!-- <p>
-            So it's relevant to notice that, throughout the survey, part of it will offer
-            insights provided by the decision tree (a decision tree visualization) whereas the other part will not. It is expected that these
-            different code analysis approaches - with or without support - may influence the decision about the code smell type that affects the source code, 
-            changing the way that how similar 2 or more developers detects each type of code smell.
-        </p> -->
+            This experiment follows the same research premise: we intend to expose developers to different source code
+            snippets, written in java, all of them named as "smelly code" due to prediction provided by a
+            machine learning predictor. But, unlike previous studies, we will test a different perspective - show a java
+            code with a visual representation of a decision tree classifier. As an interpretable machine
+            learning technique, this classifier, through its nodes and rules, will give insights to developers aimed
+            to serve as a support for decision making, i. e., it explains how the predictor detected the presence of
+            some type of code smell in code.
+            Therefore, we expect that such visual representation of the rules may influence the subjectivity during code
+            smell evaluation. </p>
 
         <p>
             <!-- Answering the survey might take around XX minutes of your time. -->
@@ -50,10 +49,10 @@
     <div id="members">
         <p><strong>Ms Student:</strong> Christiano Rossini (christianorossini@ic.ufal.br)</p>
         <p><strong>Advisor:</strong> Baldoino Fonseca (baldoino@ic.ufal.br)</p>
-    </div>    
+    </div>
 
     <p class="text-center">
-        <a href="newparticipant/" title="Enter" class="btn btn-primary btn-lg" role="button">Go to survey</a>
+        <a href="newparticipant/" title="Enter" class="btn btn-primary btn-lg" role="button">Go to experiment</a>
     </p>
 
     <p>** Preferable browsers: IE, Mozila Firefox and Google Chrome</p>
