--- a/questionnaire/templates/masterquest/survey_warmup.html
+++ b/questionnaire/templates/masterquest/survey_warmup.html
@@ -48,41 +48,40 @@
 <script type="text/javascript" src="https://introjs.com/intro.js"></script>
 
 <script type="text/javascript">
-   function startIntro() {
-    var intro = introJs();
-    intro.setOptions({
-        steps: [
-            {
-                element: document.querySelector('#csDefinition'),
-                intro: "The experiment will suggest the presence of a code smell type in the java code, located in the middle panel. It brings the code smell type and its definition."
-            },
-            {
-                element: document.querySelector('#javaCode'),
-                intro: "The java code has to be evaluated by participant in order to locate the suspicious code smell described by the task."
-            },            
-            {% if showTree %}
-            {
-                element: document.querySelector('#imgDecisionTree'),
-                intro: "The decision tree contains rules that lead to the code smell type that affects the current java code. It serves merely as a support for decision making."
-            },
-            {
-                element: document.querySelector('#nodesGlossary'),
-                intro: "This table is a glossary that explains the meaning of each metric showed in each node."
-            },            
-            {% endif %}
-            {
-                element: document.querySelector('#taskForm'),
-                intro: "Fill in the form according to your agreement level about the presence of the suggested code smell type."
-            },
-            {
-                element: document.querySelector('#btnTaskSubmit'),
-                intro: "Submit the task."
-            },
-        ]
-    });
+    function startIntro() {
+        var intro = introJs();
+        intro.setOptions({
+            steps: [
+                {                
+                    intro: "This is the experiment's enviroment."
+                },
+                {
+                    element: document.querySelector('#csDefinition'),
+                    intro: "The experiment will suggest the presence of a code smell type in the java code, located in the middle panel. It brings the code smell type and its definition."
+                },
+                {
+                    element: document.querySelector('#javaCode'),
+                    intro: "The java code has to be evaluated by participant in order to locate the suspicious code smell described by the task."
+                },            
+                {% if showTree %}
+                {
+                    element: document.querySelector('#imgDecisionTree'),
+                    intro: "The decision tree contains rules that lead to the code smell type that affects the current java code. It serves merely as a support for decision making."
+                },
+                {
+                    element: document.querySelector('#nodesGlossary'),
+                    intro: "This table is a glossary that explains the meaning of each metric showed in each node."
+                },            
+                {% endif %}
+                {
+                    element: document.querySelector('#taskForm'),
+                    intro: "Fill in the form according to your agreement level about the presence of the suggested code smell type. After that, submit the form."
+                },                
+            ]
+        });
 
-    intro.start();
-}
+        intro.start();
+    }
 
 </script>
 
