melhoria nos hints

--- a/questionnaire/templates/masterquest/survey.html
+++ b/questionnaire/templates/masterquest/survey.html
@@ -157,7 +157,7 @@
                     },
                     {
                         element: document.querySelector('#imgDecisionTree'),
-                        intro: "The highlighted path from the root node until leaf stands for the satisfied conditions within nodes that leads the predictor (classifier) to classfiy the current java code as \"smelly code\" (or {{task.getCsDescription.0}}). "
+                        intro: "The highlighted path from the root node until leaf stands for the satisfied conditions within nodes that leads the predictor (classifier) to classfiy the current java code as \"smelly code\" ({{task.getCsDescription.0}}, as suggested by current task). "
                     },
                     {
                         element: document.querySelector('#nodesGlossary'),
