--- a/questionnaire/templates/masterquest/inc_survey_treePanel.html
+++ b/questionnaire/templates/masterquest/inc_survey_treePanel.html
@@ -17,7 +17,7 @@
                 <figcaption class="figure-caption">Decision tree</figcaption>
             </figure>
         </div>
-    </div>>
+    </div>
 
     <div id="nodesGlossary">
         <h4 class="taskTittle">Nodes glossary</h4>
