--- a/questionnaire/templates/masterquest/inc_survey_cs_definition.html
+++ b/questionnaire/templates/masterquest/inc_survey_cs_definition.html
@@ -1,7 +1,7 @@
 {% load static %}
 
 <div class="alert alert-warning" role="alert" id="csDefinition">
-    The smell presented in the java code was classified as <strong>{{task.getCsDescription.0}}</strong> <br>
-
+    The smell presented in the java code was classified as <strong style="text-transform: uppercase"">{{task.getCsDescription.0}}</strong>
+    <hr>
     Smell description: <strong>{{task.getCsDescription.1}}</strong>
 </div>
