--- a/questionnaire/templates/masterquest/inc_survey_tutorial.html
+++ b/questionnaire/templates/masterquest/inc_survey_tutorial.html
@@ -27,7 +27,7 @@
                 },
                 {
                     element: document.querySelector('#imgDecisionTree'),
-                    intro: "The highlighted path from the root node until leaf stands for the satisfied conditions within nodes that leads the predictor (classifier) to classfiy the current java code as \"smelly code\" ({{task.getCsDescription.0}}, as suggested by current task). "
+                    intro: "The highlighted path from the root node until leaf stands for the satisfied conditions within nodes that leads the predictor (machine learning classifier) to classfiy the current java code as \"smelly code\" ({{task.getCsDescription.0}}, as suggested by current task). "
                 },
                 {
                     element: document.querySelector('#nodesGlossary'),
